--- a/_config.yml
+++ b/_config.yml
@@ -3,23 +3,23 @@
 #############################
 
 # The title that appears on the tab
-title: Andy Zhang's Gallery
+title: Tyler's Personal Website
 
 # The title on the web page
-full_name: Andy Zhang
+full_name: Tyler Thomas
 
 # The type of layout
 # Options: ROWS, SQUARES, COLUMNS
-layout_style: ROWS
+layout_style: COLUMNS
 
 # Variables below are default. Feel free to customize the values below, but do
 # not remove the property.
 
 # Integer: Spacing between each photo
-spacing: 10
+spacing: 2
 
 # Boolean(true|false): Shuffle the photos in the album
-shuffle: false
+shuffle: true
 
 # Integer: Number of columns for square or columns
 columns: 4
@@ -28,7 +28,7 @@ columns: 4
 max_height: 400
 
 # Handle
-instagram: andy.fuji
+instagram: tylerlovesapples
 
 ######################
 # END OF CONFIG CODE #
@@ -42,10 +42,10 @@ name: Gallery
 description: Photography Portfolio
 
 # Your name, as you want it to appear underneath each post and in the footer
-author: Andy Zhang
+author: Tyler Thomas
 
 # Your email if you want it to be linked on the contact page
-author_email: andzhng@gmail.com
+author_email: tylert@southern.edu
 
 # The directory for category index pages. Change it to something else if
 # for example you want links like /categories/category1 instead of /category1
@@ -58,4 +58,4 @@ category_dir: /
 baseurl: /
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
-# url: http://andyzhang.net/gallery
+# url: http://tylerthomas.xyz
