--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ full_name: Tyler Thomas
 
 # The type of layout
 # Options: ROWS, SQUARES, COLUMNS
-layout_style: COLUMNS
+layout_style: ROWS
 
 # Variables below are default. Feel free to customize the values below, but do
 # not remove the property.
 
 # Integer: Spacing between each photo
-spacing: 2
+spacing: 3
 
 # Boolean(true|false): Shuffle the photos in the album
 shuffle: true
@@ -55,7 +55,7 @@ category_dir: /
 # Note - if you enable this, and attempt to view your site locally you have to use the baseurl in your local path.
 # Example, you must use http://localhost:4000/path/to/blog
 #baseurl: /path/to/blog
-baseurl: /
+baseurl: http://localhost:5500/
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
 # url: http://tylerthomas.xyz
